--- a/libreoffice/trunk/PKGBUILD
+++ b/libreoffice/trunk/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=('libreoffice' 'libreoffice-sdk' 'libreoffice-extension-nlpsolver' 'libr
          'libreoffice-extension-report-builder' 'libreoffice-extension-wiki-publisher' 'libreoffice-extension-ct2n')
 _LOver=3.3.99.4
 pkgver=3.4beta4
-pkgrel=1
+pkgrel=2
 arch=('i686' 'x86_64')
 #_LO_tree="3.4"
 _OFFICEUPD="300"
@@ -16,13 +16,12 @@ makedepends=( # makedepends
              'boost' 'sane' 'perl-archive-zip' 'zip' 'unzip' 'xulrunner' 'unixodbc' 'hsqldb-java'
              'apache-ant' 'gperf' 'poppler' 'kdelibs' 'gconf' 'cppunit'
              'beanshell'  'vigra' 'libldap' 'lucene' 'libmythes' 'junit' 'libwpg' 'imagemagick'
-              # for additional ooo-build features
-	     'mesa>=7.5' 'gstreamer0.10-base>=0.10.26'
+	     'mesa' 'gstreamer0.10-base'
               #'saxon' - currently broken 
              # the depends from libreoffice main pkg
-             "curl>=7.20.0" "hunspell>=1.2.8" "python2>=2.7" 'libwpd>=0.9.0' 'libxaw' "neon>=0.28.6"
+             "curl>=7.20.0" "hunspell>=1.2.8" "python2>=2.7" 'libwpd>=0.9.2' 'libwps' 'libxaw' "neon>=0.28.6"
              'pango' 'nspr' 'libjpeg' 'libxrandr' 'libgl' 'dbus-glib' "icu>=4.6" 'libxslt'
-             'redland' 'libgraphite' 'hyphen' 'lpsolve' 'gcc-libs' 'sh'
+             'redland' 'libgraphite' 'hyphen' 'lpsolve' 'gcc-libs' 'sh'  'libtextcat'
              'hicolor-icon-theme' 'desktop-file-utils' 'shared-mime-info' 'java-runtime' 'gtk2' # keep gtk2 for install script
 	     'ttf-dejavu') # to satisfy regression tests
 	     # libwps translate-toolkit libtextcat - todo move them to extra to allow --with-system-foo builds
@@ -33,7 +32,6 @@ _mirror="http://download.documentfoundation.org/libreoffice/src"
 #_mirror="ftp://ftp.astral.ro/mirrors/tdf/libreoffice/src"
 _additional_source_url="http://hg.services.openoffice.org/binaries"
 source=(${_mirror}/${pkgbase}-{artwork,base,bootstrap,calc,components,extensions,extras,filters,help,impress,libs-core,libs-extern,libs-extern-sys,libs-gui,postprocess,sdk,testing,ure,writer}-${_LOver}.tar.bz2 #,translations
-	${_additional_source_url}/128cfc86ed5953e57fe0f5ae98b62c2e-libtextcat-2.2.tar.gz
 	${_additional_source_url}/1f24ab1d39f4a51faf22244c94a6203f-xmlsec1-1.2.14.tar.gz
 	${_additional_source_url}/35c94d2df8893241173de1d16b6034c0-swingExSrc.zip
 	${_additional_source_url}/798b2ffdc8bcfe7bca2cf92b62caf685-rhino1_5R5.zip
@@ -58,7 +56,6 @@ source=(${_mirror}/${pkgbase}-{artwork,base,bootstrap,calc,components,extensions
 	${_additional_source_url}/ba2930200c9f019c2d93a8c88c651a0f-flow-engine-0.9.4.zip
 	${_additional_source_url}/18f577b374d60b3c760a3a3350407632-STLport-4.5.tar.gz
 	http://download.go-oo.org/src/7a0dcb3fe1e8c7229ab4fb868b7325e6-mdds_0.5.2.tar.bz2
-	http://download.go-oo.org/src/9e436bff44c60dc8b97cba0c7fc11a5c-libwps-0.2.0.tar.bz2
 	http://download.go-oo.org/extern/185d60944ea767075d27247c3162b3bc-unowinreg.dll
 	http://download.go-oo.org/extern/b4cae0700aa1c2aef7eb7f345365e6f1-translate-toolkit-1.8.1.tar.bz2
 	http://download.go-oo.org/src/451ccf439a36a568653b024534669971-ConvertTextToNumber-1.3.2.oxt
@@ -66,16 +63,13 @@ source=(${_mirror}/${pkgbase}-{artwork,base,bootstrap,calc,components,extensions
 	http://download.go-oo.org/src/f02578f5218f217a9f20e9c30e119c6a-boost_1_44_0.tar.bz2
 	buildfix_i116795.diff
 	buildfix_boost.diff
-	buildfix_ct2n.diff
-	fix_destdir.diff)
+	buildfix_ct2n.diff)
 noextract=(185d60944ea767075d27247c3162b3bc-unowinreg.dll
 	b4cae0700aa1c2aef7eb7f345365e6f1-translate-toolkit-1.8.1.tar.bz2
 	7a0dcb3fe1e8c7229ab4fb868b7325e6-mdds_0.5.2.tar.bz2
 	ada24d37d8d638b3d8a9985e80bc2978-source-9.0.0.7-bj.zip
 	798b2ffdc8bcfe7bca2cf92b62caf685-rhino1_5R5.zip
 	1f24ab1d39f4a51faf22244c94a6203f-xmlsec1-1.2.14.tar.gz
-	128cfc86ed5953e57fe0f5ae98b62c2e-libtextcat-2.2.tar.gz
-	9e436bff44c60dc8b97cba0c7fc11a5c-libwps-0.2.0.tar.bz2
 	fdb27bfe2dbe2e7b57ae194d9bf36bab-SampleICC-1.3.2.tar.gz
 	35c94d2df8893241173de1d16b6034c0-swingExSrc.zip
 	2a177023f9ea8ec8bd00837605c5df1b-jakarta-tomcat-5.0.30-src.tar.gz
@@ -118,7 +112,6 @@ md5sums=('0b13a4c15ce0c447ebf141c29343d4f6'
          '458d7e4bb7c72a7c54527ccbb412ab72'
          '1365ec1b5b8b0e55db798cc8713b381c'
          '1c7c0c03fcfd632dfb3d3a861f5931a3'
-         '128cfc86ed5953e57fe0f5ae98b62c2e'
          '1f24ab1d39f4a51faf22244c94a6203f'
          '35c94d2df8893241173de1d16b6034c0'
          '798b2ffdc8bcfe7bca2cf92b62caf685'
@@ -143,7 +136,6 @@ md5sums=('0b13a4c15ce0c447ebf141c29343d4f6'
          'ba2930200c9f019c2d93a8c88c651a0f'
          '18f577b374d60b3c760a3a3350407632'
          '7a0dcb3fe1e8c7229ab4fb868b7325e6'
-         '9e436bff44c60dc8b97cba0c7fc11a5c'
          '185d60944ea767075d27247c3162b3bc'
          'b4cae0700aa1c2aef7eb7f345365e6f1'
          '451ccf439a36a568653b024534669971'
@@ -151,8 +143,7 @@ md5sums=('0b13a4c15ce0c447ebf141c29343d4f6'
          'f02578f5218f217a9f20e9c30e119c6a'
          '0520d63c946e272ed3bdfc863fbdc42e'
          'bc228237108cab7745897a9f466b6d39'
-         'eee273f501ff45dc5f1365e78c6d57c0'
-         'b99dd668b290c4d7269a7cd57544d2b1')
+         'eee273f501ff45dc5f1365e78c6d57c0')
 
 build() {
 
@@ -179,7 +170,6 @@ build() {
 	patch -Np1 -i ${srcdir}/buildfix_i116795.diff
 	patch -Np1 -i ${srcdir}/buildfix_boost.diff
 	patch -Np1 -i ${srcdir}/buildfix_ct2n.diff
-	patch -Np1 -i ${srcdir}/fix_destdir.diff
 	
 	# unset C(XX)FLAGS
 	# http://www.openoffice.org/issues/show_bug.cgi?id=103205
@@ -205,9 +195,12 @@ build() {
 #		--with-package-format="native" archive installed tardist" \
 
 #	autoconf -v -f
+
+	# non-SMP test build
+#	export MAKEFLAGS="-j1"
 	./configure --with-build-version="${_LOver} ArchLinux build-${pkgrel}" --with-vendor="ArchLinux" \
 		--with-unix-wrapper="libreoffice" \
-		--with-max-jobs=${MAKEFLAGS/-j/} \
+		--with-max-jobs=${MAKEFLAGS/-j/} --with-num-cpus=${MAKEFLAGS/-j/} \
 		--with-external-tar="${srcdir}/ext_sources" \
 		--prefix=/usr --exec-prefix=/usr --sysconfdir=/etc \
 		--with-install-dirname="${pkgbase}" --libdir=/usr/lib --mandir=/usr/share/man \
@@ -250,10 +243,12 @@ build() {
 		--with-external-hyph-dir=/usr/share/hyphen \
 		--with-external-thes-dir=/usr/share/mythes \
 		--with-system-cppunit\
-		--with-system-libwpg\
+		--with-system-libwpg \
+		--with-system-libwps \
 		--with-system-redland\
 		--without-system-saxon\
-		--without-system-libtextcat\
+		--with-system-libtextcat \
+		--with-external-libtextcat-data \
 		--with-openldap\
 		--with-ant-home="/usr/share/java/apache-ant"\
 		--without-system-boost\
@@ -292,9 +287,9 @@ package_libreoffice() {
 
  pkgdesc="a productivity suite that is compatible with other major office suites"
  install=${pkgbase}.install
- depends=("curl>=7.20.0" "hunspell>=1.2.8" "python2>=2.7" 'libwpd>=0.9.0' 'libxaw' "neon>=0.28.6"
+ depends=("curl>=7.20.0" "hunspell>=1.2.8" "python2>=2.7" 'libwpd>=0.9.2' 'libwps' 'libxaw' "neon>=0.28.6"
           'pango' 'nspr' 'libjpeg' 'libxrandr' 'libgl' 'dbus-glib' "icu>=4.6" 'libxslt'
-          'redland' 'libgraphite' 'hyphen' 'lpsolve' 'gcc-libs' 'sh'
+          'redland' 'libgraphite' 'hyphen' 'lpsolve' 'gcc-libs' 'sh' 'libtextcat'
           'hicolor-icon-theme' 'desktop-file-utils' 'shared-mime-info' 'java-runtime' 'gtk2') # keep gtk2 for install script
           #'saxon'
  optdepends=( #'java-runtime:     adds java support'
