--- a/apache/trunk/PKGBUILD
+++ b/apache/trunk/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=apache
 pkgver=2.2.17
-pkgrel=1
+pkgrel=2
 pkgdesc='A high performance Unix-based HTTP server'
 arch=('i686' 'x86_64')
 options=('!libtool')
@@ -18,7 +18,7 @@ backup=(etc/conf.d/apache etc/httpd/conf/httpd.conf
         etc/logrotate.d/httpd)
 depends=('openssl' 'zlib' 'apr-util' 'pcre')
 optdepends=('lynx: apachectl status')
-_itkurl=http://mpm-itk.sesse.net/apache2.2-mpm-itk-2.2.11-02
+_itkurl=http://mpm-itk.sesse.net/apache2.2-mpm-itk-2.2.17-01
 source=(http://www.apache.org/dist/httpd/httpd-${pkgver}.tar.bz2
         ${_itkurl}/02-rename-prefork-to-itk.patch
         ${_itkurl}/03-add-mpm-to-build-system.patch
@@ -29,21 +29,23 @@ source=(http://www.apache.org/dist/httpd/httpd-${pkgver}.tar.bz2
         ${_itkurl}/08-max-clients-per-vhost.patch
         ${_itkurl}/09-capabilities.patch
         ${_itkurl}/10-nice.patch
+        ${_itkurl}/11-fix-htaccess-reads-for-persistent-connections.patch
         apachectl-confd.patch
         apache.conf.d
         httpd.logrotate
         httpd
         arch.layout)
 md5sums=('16eadc59ea6b38af33874d300973202e'
-         'db42cfcc18ae1c32aaaff2347e35b79d'
-         '131408ad4dc7b18547b4e062e7e495ab'
-         'ee488f391054d528547c3a372faa2aa7'
-         'b202944761b2f0516196488b12504236'
-         '78fa15f8ca3a284b7d71f942e24e47fb'
-         'd33e39350e987721d50e6fb8e164ab6b'
-         '9f7a8935f9cabc7b46d0052906634cef'
-         '1b28e3363e1b0d05b738a21e7ddd264f'
-         'd9667fcd2ffecc63e446edd4d6666731'
+         'f1d9d41360908ceb2374da55ae99197a'
+         'cdfa04985a0efa850976aef01c2a0c40'
+         '0930d2d0612eb0a53a0d00aea7e8687f'
+         '3a0c29bb91442c33ea73ebbe072af922'
+         '0ef4729a6f1ffc848ad0e9b440a66f66'
+         '940944caa948340b11ddae56adaef89b'
+         'ce09a987523884de8838f73dc8ec0d19'
+         'e75b7dd8d8afcd299ba4ab2ab81c11e4'
+         'ce1ccc21f3ad8625169c8f62913450ac'
+         '1e5b222edcfbf99a3edc56fcb2074fbe'
          '4ac64df6e019edbe137017cba1ff2f51'
          '08b3c875f6260644f2f52b4056d656b0'
          '6382331e9700ed9e8cc78ea51887b537'
@@ -77,6 +79,7 @@ build() {
 			patch -Np1 -i "${srcdir}/08-max-clients-per-vhost.patch"
 			patch -Np1 -i "${srcdir}/09-capabilities.patch"
 			patch -Np1 -i "${srcdir}/10-nice.patch"
+                        patch -Np1 -i "${srcdir}/11-fix-htaccess-reads-for-persistent-connections.patch"
 
 			autoconf
 		fi
