--- a/dbus-core/trunk/PKGBUILD
+++ b/dbus-core/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Link Dupont <link@subpop.net>
 #
 pkgname=dbus-core
-pkgver=1.4.1
+pkgver=1.4.8
 pkgrel=1
 pkgdesc="Freedesktop.org message bus system"
 url="http://www.freedesktop.org/Software/dbus"
@@ -15,12 +15,13 @@ options=(!libtool)
 install=dbus.install
 source=(http://dbus.freedesktop.org/releases/dbus/dbus-${pkgver}.tar.gz
         dbus)
-md5sums=('99cb057700c0455fb68f8d57902f77ac'
+md5sums=('e30253e15f0f4e6c5ee9e6f0eba5046c'
          '08f93dd19cffd1b45ab05c1fd4efb560')
 
 build() {
   cd "${srcdir}/dbus-${pkgver}"
-  ECHO="echo" ./configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var \
+  sed -i -e 's/#ifdef DBUS_BUILD_X11/#if 1/' dbus/dbus-sysdeps-unix.c
+  ./configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var \
       --libexecdir=/usr/lib/dbus-1.0 --with-dbus-user=81 \
       --with-system-pid-file=/var/run/dbus.pid \
       --enable-inotify --disable-dnotify \
