--- a/mysql/trunk/PKGBUILD
+++ b/mysql/trunk/PKGBUILD
@@ -31,8 +31,13 @@ build() {
   cmake ../${pkgbase}-${pkgver} \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr \
-    -DMYSQL_DATADIR=/var/lib/mysql \
+    -DMANUFACTURER="Arch Linux" \
     -DSYSCONFDIR=/etc/mysql \
+    -DMYSQL_DATADIR=/var/lib/mysql \
+    -DMYSQL_UNIX_ADDR=/var/run/mysqld/mysqld.sock \
+    -DDEFAULT_CHARSET=utf8 \
+    -DDEFAULT_COLLATION=utf8_general_ci \
+    -DENABLED_LOCAL_INFILE=ON \
     -DINSTALL_INFODIR=share/mysql/docs \
     -DINSTALL_MANDIR=share/man \
     -DINSTALL_PLUGINDIR=/usr/lib/mysql/plugin \
@@ -41,23 +46,21 @@ build() {
     -DINSTALL_DOCREADMEDIR=share/mysql \
     -DINSTALL_SUPPORTFILESDIR=share/mysql \
     -DINSTALL_MYSQLSHAREDIR=share/mysql \
+    -DINSTALL_DOCDIR=share/mysql/docs \
     -DINSTALL_SHAREDIR=share/mysql \
     -DWITH_READLINE=ON \
     -DWITH_ZLIB=system \
     -DWITH_SSL=system \
     -DWITH_LIBWRAP=ON \
-    -DDEFAULT_CHARSET=utf8 \
-    -DDEFAULT_COLLATION=utf8_general_ci \
+    -DWITH_MYSQLD_LDFLAGS="${LDFLAGS}" \
     -DWITH_EXTRA_CHARSETS=complex \
     -DWITH_EMBEDDED_SERVER=ON \
-    -DMYSQL_UNIX_ADDR=/var/run/mysqld/mysqld.sock \
-    -DENABLED_LOCAL_INFILE=ON \
+    -DWITH_INNOBASE_STORAGE_ENGINE=1 \
     -DWITH_PARTITION_STORAGE_ENGINE=1 \
     -DWITHOUT_EXAMPLE_STORAGE_ENGINE=1 \
     -DWITHOUT_ARCHIVE_STORAGE_ENGINE=1 \
     -DWITHOUT_BLACKHOLE_STORAGE_ENGINE=1 \
-    -DWITHOUT_FEDERATED_STORAGE_ENGINE=1 \
-    -DWITH_INNOBASE_STORAGE_ENGINE=1
+    -DWITHOUT_FEDERATED_STORAGE_ENGINE=1
 
   make
 }
@@ -71,11 +74,11 @@ package_libmysqlclient(){
     make -C ${dir} DESTDIR="${pkgdir}" install
   done
 
-  install -d "${pkgdir}/usr/bin"
-  install -m755 scripts/mysql_config "${pkgdir}/usr/bin/"
-  install -d "${pkgdir}/usr/share/man/man1"
+  install -d "${pkgdir}"/usr/bin
+  install -m755 scripts/mysql_config "${pkgdir}"/usr/bin/
+  install -d "${pkgdir}"/usr/share/man/man1
   for man in mysql_config mysql_client_test_embedded mysqltest_embedded; do
-    install -m644 "${srcdir}/${pkgbase}-${pkgver}/man/$man.1" "${pkgdir}/usr/share/man/man1/$man.1"
+    install -m644 "${srcdir}"/${pkgbase}-${pkgver}/man/$man.1 "${pkgdir}"/usr/share/man/man1/$man.1
   done
 }
 
@@ -87,9 +90,9 @@ package_mysql-clients(){
   make -C client DESTDIR="${pkgdir}" install
 
   # install man pages
-  install -d "${pkgdir}/usr/share/man/man1"
+  install -d "${pkgdir}"/usr/share/man/man1
   for man in mysql mysqladmin mysqlcheck mysqldump mysqlimport mysqlshow mysqlslap; do
-    install -m644 "${srcdir}/${pkgbase}-${pkgver}/man/$man.1" "${pkgdir}/usr/share/man/man1/$man.1"
+    install -m644 "${srcdir}"/${pkgbase}-${pkgver}/man/$man.1 "${pkgdir}"/usr/share/man/man1/$man.1
   done
 
   # provided by mysql
@@ -104,28 +107,24 @@ package_mysql(){
   optdepends=('perl-dbi' 'perl-dbd-mysql')
 
   cd "${srcdir}"/build
-  make DESTDIR=${pkgdir} install
+  make DESTDIR="${pkgdir}" install
 
-  install -Dm644 ${srcdir}/my.cnf ${pkgdir}/etc/mysql/my.cnf
-  install -Dm755 ${srcdir}/mysqld ${pkgdir}/etc/rc.d/mysqld
+  install -Dm644 "${srcdir}"/my.cnf "${pkgdir}"/etc/mysql/my.cnf
+  install -Dm755 "${srcdir}"/mysqld "${pkgdir}"/etc/rc.d/mysqld
 
   # provided by libmysqlclient
-  rm ${pkgdir}/usr/bin/{mysql_config,mysql_client_test_embedded,mysqltest_embedded}
-  rm ${pkgdir}/usr/lib/libmysql*
-  rm -r ${pkgdir}/usr/include/
-  rm ${pkgdir}/usr/share/man/man1/{mysql_config,mysql_client_test_embedded,mysqltest_embedded}.1
+  rm "${pkgdir}"/usr/bin/{mysql_config,mysql_client_test_embedded,mysqltest_embedded}
+  rm "${pkgdir}"/usr/lib/libmysql*
+  rm -r "${pkgdir}"/usr/include/
+  rm "${pkgdir}"/usr/share/man/man1/{mysql_config,mysql_client_test_embedded,mysqltest_embedded}.1
   
   # provided by mysql-clients
-  rm ${pkgdir}/usr/bin/{mysql,mysqladmin,mysqlcheck,mysqldump,mysqlimport,mysqlshow,mysqlslap}
-  rm ${pkgdir}/usr/share/man/man1/{mysql,mysqladmin,mysqlcheck,mysqldump,mysqlimport,mysqlshow,mysqlslap}.1
+  rm "${pkgdir}"/usr/bin/{mysql,mysqladmin,mysqlcheck,mysqldump,mysqlimport,mysqlshow,mysqlslap}
+  rm "${pkgdir}"/usr/share/man/man1/{mysql,mysqladmin,mysqlcheck,mysqldump,mysqlimport,mysqlshow,mysqlslap}.1
 
   # not needed
-  rm -r ${pkgdir}/usr/{mysql-test,sql-bench}
+  rm -r "${pkgdir}"/usr/{data,mysql-test,sql-bench}
+  rm "${pkgdir}"/usr/share/man/man1/mysql-test-run.pl.1
 
-  # These shouldn't be here
-  rm -r ${pkgdir}/usr/docs
-  install -d ${pkgdir}/var/lib/mysql
-  cp -r ${pkgdir}/usr/data/* ${pkgdir}/var/lib/mysql/
-  chmod -R 700 ${pkgdir}/var/lib/mysql
-  rm -r ${pkgdir}/usr/data
+  install -dm700 "${pkgdir}"/var/lib/mysql
 }
