--- a/java-commons-daemon/trunk/PKGBUILD
+++ b/java-commons-daemon/trunk/PKGBUILD
@@ -1,12 +1,12 @@
 # Maintainer: Guillaume ALAUX <guillaume@archlinux.org>
-_libname=commons-daemon
-pkgname=("java-${_libname}" 'java-jsvc')
-pkgbase=java-${_libname}
+pkgname=('java-commons-daemon' 'java-jsvc')
+pkgbase=java-commons-daemon
 pkgver=1.0.5
 pkgrel=1
 arch=('i686' 'x86_64')
 url="http://commons.apache.org/daemon/"
 license=('APACHE')
+_libname=commons-daemon
 source=(http://archive.apache.org/dist/commons/daemon/source/${_libname}-${pkgver}-src.tar.gz)
 md5sums=('2fe0a35d4a9c0338ecd45dad20f33662')
 makedepends=('apache-ant' 'docbook2x' 'docbook-xsl')
