--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,12 +3,12 @@
 
 pkgname=tomcat-native
 pkgver=1.1.20
-pkgrel=1
+pkgrel=2
 pkgdesc="The Apache Tomcat Native Library"
 arch=('i686' 'x86_64')
 url="http://tomcat.apache.org/"
 license="Apache"
-depends=('tomcat' 'apr' 'openssl')
+depends=('apr' 'openssl')
 makedepends=('java-environment')
 source=(http://www.apache.org/dist/tomcat/tomcat-connectors/native/${pkgver}/source/${pkgname}-${pkgver}-src.tar.gz)
 md5sums=('fb2b9d073cb6575c2d0020eda266ca0c')
