--- a/kernel26-lts/trunk/PKGBUILD
+++ b/kernel26-lts/trunk/PKGBUILD
@@ -5,27 +5,23 @@ pkgbase=kernel26-lts
 pkgname=('kernel26-lts' 'kernel26-lts-headers') # Build stock -lts kernel 
 _kernelname=${pkgname#kernel26}
 _basekernel=2.6.32
-pkgver=${_basekernel}.39
+pkgver=${_basekernel}.40
 pkgrel=1
 arch=('i686' 'x86_64')
 license=('GPL2')
 url="http://www.kernel.org"
 source=(ftp://ftp.kernel.org/pub/linux/kernel/v2.6/linux-$_basekernel.tar.bz2
         ftp://ftp.kernel.org/pub/linux/kernel/v2.6/longterm/v2.6.32/patch-$pkgver.bz2
-        libata-alignment.patch
 	# the main kernel config files
         config config.x86_64
         # standard config files for mkinitcpio ramdisk
-        ${pkgname}.preset
-	buildfix-gcc46.diff)
+        ${pkgname}.preset)
 options=(!strip)
 md5sums=('260551284ac224c3a43c4adac7df4879'
-         '6cd1e135751b51946f56a2fb49ed05a3'
-         '30851deee235a7486bd408cbe8eb2d71'
-         '3298f542840c52a8b8abc1b3795e455b'
-         'cd1a62e81eb9e910779f3eb18a6e28c6'
-         '2cbfeb3e2a18d45f82f613e97fc23355'
-	 'bb7410d7b740dfad0385a07b66e6621f')
+         '159f7438d0573ef56aac31dc175fb847'
+         '2e81de2068b902c8c7c7bc87719ce5c8'
+         'f0fcf2ca389e8997a88963d70153a479'
+         '2cbfeb3e2a18d45f82f613e97fc23355')
 
 build() {
   cd ${srcdir}/linux-$_basekernel
@@ -33,12 +29,6 @@ build() {
     # add latest kernel stable patch
     patch -Np1 -i ${srcdir}/patch-$pkgver
   fi
-
-  # fix 22343 udev crashes
-  patch -Np1 -i ${srcdir}/libata-alignment.patch
-
-  # fix build with gcc46 - http://git.kernel.org/?p=linux/kernel/git/stable/linux-2.6.38.y.git;a=commitdiff;h=b1d670f1#patch1
-  patch -Np1 -i ${srcdir}/buildfix-gcc46.diff
   
   if [ "$CARCH" = "x86_64" ]; then
     cat ../config.x86_64 >./.config
