--- a/apr-util/trunk/PKGBUILD
+++ b/apr-util/trunk/PKGBUILD
@@ -3,16 +3,16 @@
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=apr-util
-pkgver=1.3.10
-pkgrel=2
+pkgver=1.3.11
+pkgrel=1
 pkgdesc="The Apache Portable Runtime"
 arch=('i686' 'x86_64')
 url="http://apr.apache.org/"
-depends=('apr>=1.4.2' 'gdbm' 'expat' 'db' 'libldap' 'unixodbc')
+depends=('apr' 'gdbm' 'expat' 'db' 'libldap' 'unixodbc')
 options=('!libtool')
 license=('APACHE')
 source=("http://www.apache.org/dist/apr/apr-util-${pkgver}.tar.bz2")
-md5sums=('6a6f501a1b2a45166b8ffd6df29204bb')
+md5sums=('2aeddb384b03f3f73107770724d5c97b')
 
 build() {
 	cd "${srcdir}/apr-util-${pkgver}"
